add reacnetgenerator papers

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -322,3 +322,212 @@ pages={4304--4317},
 	researchgate = 364824210,
 }
 
+@Article{Bai_ChemCommun(Camb)_2021_v57_p11633,
+    author =   {Jiawei Bai and Xingchen Liu and Tingyu Lei and Botao Teng and Xiaodong
+             Wen},
+    title =    {{A combined DFTB nanoreactor and reaction network generator approach
+             for the mechanism of hydrocarbon combustion}},
+    journal =  {Chem. Commun. (Camb).},
+    year =     2021,
+    volume =   57,
+    issue =    88,
+    pages =    {11633--11636},
+    annote =   {We explored the mechanism of ethylene combustion by combining a
+             density functional tight-binding based nanoreactor molecular dynamic
+             method (DFTB-NMD) and a hidden Markov model (HMM) based reaction
+             network generator approach. The results demonstrate that the DFTB-NMD
+             is a promising method to predict the mechanism of complicated
+             combustion reactions.},
+    doi =      {10.1039/d1cc04736a},
+}
+
+@Article{Li_InternationalJournalofHydrogenEnergy_2021_v46_p38854,
+    author =   {Wenjuan Li and Shuo Yu and Liang Zhang and Jianfa Chen and Weiguo Cao
+             and Yanhua Lan},
+    title =    {{ReaxFF molecular dynamics simulations of n-eicosane reaction
+             mechanisms during pyrolysis and combustion}},
+    journal =  {International Journal of Hydrogen Energy},
+    year =     2021,
+    volume =   46,
+    issue =    78,
+    pages =    {38854--38870},
+    doi =      {10.1016/j.ijhydene.2021.08.234},
+}
+
+@Article{Lei_JPhysChemLett_2021_v12_p9413,
+    author =   {Tingyu Lei and Xingchen Liu and Amar Deep Pathak and Sharan Shetty and
+             Qingya Liu and Xiaodong Wen},
+    title =    {{Insights into Coke Formation and Removal under Operating Conditions
+             with a Quantum Nanoreactor Approach}},
+    journal =  {J. Phys. Chem. Lett.},
+    year =     2021,
+    volume =   12,
+    issue =    39,
+    pages =    {9413--9421},
+    annote =   {The in situ formation and removal of coke is a critical problem in
+             heterogeneous catalysis, but its mechanism is not well understood.
+             This work investigates the mechanism of carbon deposition and
+             hydrogenation on an Fe cluster under high-temperature conditions with
+             the density functional tight-binding (DFTB) based nanoreactor
+             molecular dynamics (NMD) method. Our study shows that successive
+             formation of carbon chains, rings, and fused rings occurred during the
+             carbon deposition on Fe clusters. Hydrogenation of activated carbon
+             happens through direct C-H coupling, while the hydrogenation of
+             graphitic carbon involves hydrogenation of the edge carbon, ring-
+             opening reaction, and dealkylation reaction. The main function of the
+             Fe catalyst is to provide the active sites for H2 dissociation and
+             dissociated H spillover, while its activity toward C-C bond breaking
+             is limited. These results highlight the role of the DFTB-NMD method as
+             an effective tool to investigate reaction mechanisms under operating
+             conditions in heterogeneous catalysis.},
+    doi =      {10.1021/acs.jpclett.1c02892},
+}
+
+@Article{Ponnuchamy_Processes_2021_v9_p714,
+    author =   {Veerapandian Ponnuchamy and Jakub Sandak and Anna Sandak},
+    title =    {{Revealing of Supercritical Water Gasification Process of Lignin by
+             Reactive Force Field Molecular Dynamics Simulations}},
+    journal =  {Processes},
+    year =     2021,
+    volume =   9,
+    issue =    4,
+    pages =    714,
+    annote =   {<jats:p>Gasification with supercritical water is an efficient process
+             that can be used for the valorization of biomass. Lignin is the second
+             most abundant biopolymer in biomass and its conversion is fundamental
+             for future energy and value-added chemicals. In this paper, the
+             supercritical water gasification process of lignin by employing
+             reactive force field molecular dynamics simulations (ReaxFF MD) was
+             investigated. Guaiacyl glycerol-{\ensuremath{\beta}}-guaiacyl ether
+             (GGE) was considered as a lignin model to evaluate the reaction
+             mechanism and identify the components at different temperatures from
+             1000 K to 5000 K. The obtained results revealed that the reactions and
+             breaking of the lignin model started at 2000 K. At the primary stage
+             of the reaction at 2000 K the {\ensuremath{\beta}}-O-4 bond tends to
+             break into several compounds, forming mainly guaiacol and
+             1,3-benzodioxole. In particular, 1,3-benzodioxole undergoes
+             dissociation and forms cyclopentene-based ketones. Afterward,
+             dealkylation reaction occurred through hydroxyl radicals of water to
+             form methanol, formaldehyde and methane. Above 2500 K, H2, CO and CO2
+             are predominantly formed in which water molecules contributed hydrogen
+             and oxygen for their formation. Understanding the detailed reactive
+             mechanism of lignin{\textquoteright}s gasification is important for
+             efficient energy conversion of biomass.</jats:p>},
+    doi =      {10.3390/pr9040714},
+}
+
+@Article{Wang_MaterialsTodayCommunications_2022_v33_p104379,
+    author =   {Hao-Ran Wang and Chong Zhang and Cheng-Guo Sun and Bing-Cheng Hu and
+             Xue-Hai Ju},
+    title =    {{5,6-Biheterocyclic pentazolate salts as promising energetic materials:
+             a new design strategy}},
+    journal =  {Materials Today Communications},
+    year =     2022,
+    volume =   33,
+    pages =    104379,
+    doi =      {10.1016/j.mtcomm.2022.104379},
+}
+
+@Article{Wang_JACSAu_2022_v2_p2081,
+    author =   {Yutong Wang and Guozhu Liu},
+    title =    {{Inhomogeneity Effects on Reactions in Supercritical Fluids: A
+             Computational Study on the Pyrolysis of <i>n</i>-Decane}},
+    journal =  {JACS Au},
+    year =     2022,
+    volume =   2,
+    issue =    9,
+    pages =    {2081--2088},
+    annote =   {Supercritical fluids exhibit peculiar inhomogeneity, which strongly
+             affects reaction behaviors in them. However, explanations for
+             inhomogeneity and its effect on reactions are both ambiguous so far.
+             Here, we provide an atomic-level understanding of inhomogeneity
+             effects on reactions via the computational method, with the example of
+             n-decane pyrolysis under supercritical conditions. We describe the
+             characteristic pyrolysis behaviors through collective variable-driven
+             hyperdynamics (CVHD) simulations and explain the inhomogeneity of
+             supercritical n-decane as the coexistence of gas-like and liquid-like
+             atoms by a trained machine learning classifier. Due to their specific
+             local environment, the appearance of liquid-like atoms under
+             supercritical conditions significantly increases the type and
+             frequency of bimolecular reactions and eventually causes changes in
+             product distributions. Future research with this method is expected to
+             extend the effect of inhomogeneity on other reactions under
+             supercritical conditions or other condensed phases.},
+    PMCID =    {PMC9516705},
+    doi =      {10.1021/jacsau.2c00359},
+}
+
+@Article{Chen_ChemicalEngineeringJournal_2023_v451_p138644,
+    author =   {Jingwei Chen and Yu Bai and Tian Meng and Qiteng Wang and Chenxi Wang
+             and E. Jiaqiang},
+    title =    {{Detailed mechanisms of amoxicillin decomposition in supercritical
+             water by ReaxFF reactive molecular dynamics simulation}},
+    journal =  {Chemical Engineering Journal},
+    year =     2023,
+    volume =   451,
+    pages =    138644,
+    doi =      {10.1016/j.cej.2022.138644},
+}
+
+@Article{Batuer_ChemicalEngineeringJournal_2021_v405_p126633,
+    author =   {Adili Batuer and Dezhen Chen and Xingchu He and Zhen Huang},
+    title =    {{Simulation methods of cotton pyrolysis based on ReaxFF and the
+             influence of volatile removal ratio on volatile evolution and char
+             formation}},
+    journal =  {Chemical Engineering Journal},
+    year =     2021,
+    volume =   405,
+    pages =    126633,
+    doi =      {10.1016/j.cej.2020.126633},
+}
+
+@Article{Chu_PhysChemChemPhys_2022_vNone_pNone,
+    author =   {Qingzhao Chu and Xiaoya Chang and Kang Ma and Xiaolong Fu and Dongping
+             Chen},
+    title =    {{Revealing the thermal decomposition mechanism of RDX crystals by a
+             neural network potential}},
+    journal =  {Phys. Chem. Chem. Phys.},
+    year =     2022,
+    annote =   {<jats:p>A neural network potential (NNP) is developed to investigate
+             the complex reaction dynamics of 1,3,5-trinitro-1,3,5-triazine (RDX)
+             thermal decomposition.</jats:p>},
+    doi =      {10.1039/D2CP03511A},
+}
+@Article{Chu_JPhysChemLett_2022_v13_p4052,
+    author =   {Qingzhao Chu and Kai H Luo and Dongping Chen},
+    title =    {{Exploring Complex Reaction Networks Using Neural Network-Based
+             Molecular Dynamics Simulation}},
+    journal =  {J. Phys. Chem. Lett.},
+    year =     2022,
+    volume =   13,
+    issue =    18,
+    pages =    {4052--4057},
+    annote =   {Ab initio molecular dynamics (AIMD) is an established method for
+             revealing the reactive dynamics of complex systems. However, the high
+             computational cost of AIMD restricts the explorable length and time
+             scales. Here, we develop a fundamentally different approach using
+             molecular dynamics simulations powered by a neural network potential
+             to investigate complex reaction networks. This potential is trained
+             via a workflow combining AIMD and interactive molecular dynamics in
+             virtual reality to accelerate the sampling of rare reactive processes.
+             A panoramic visualization of the complex reaction networks for
+             decomposition of a novel high explosive (ICM-102) is achieved without
+             any predefined reaction coordinates. The study leads to the discovery
+             of new pathways that would be difficult to uncover if established
+             methods were employed. These results highlight the power of neural
+             network-based molecular dynamics simulations in exploring complex
+             reaction mechanisms under extreme conditions at the ab initio level,
+             pushing the limit of theoretical and computational chemistry toward
+             the realism and fidelity of experiments.},
+    doi =      {10.1021/acs.jpclett.2c00647},
+}
+
+@Article{Liu_InternationalJournalofHydrogenEnergy_2022_vNone_pNone,
+    author =   {Xiuting Liu and Min Zhao and Muye Feng and Yuejin Zhu},
+    title =    {{Study on mechanisms of methane/hydrogen blended combustion using
+             reactive molecular dynamics simulation}},
+    journal =  {International Journal of Hydrogen Energy},
+    year =     2022,
+    doi =      {10.1016/j.ijhydene.2022.10.050},
+}
+
