--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -322,7 +322,7 @@ pages={4304--4317},
 	researchgate = 364824210,
 }
 
-@Article{Bai_ChemCommun(Camb)_2021_v57_p11633,
+@Article{Bai_ChemCommun_2021_v57_p11633,
     author =   {Jiawei Bai and Xingchen Liu and Tingyu Lei and Botao Teng and Xiaodong
              Wen},
     title =    {{A combined DFTB nanoreactor and reaction network generator approach
