fix mdpi figures

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -217,7 +217,7 @@
   doi={10.3390/molecules26113120},
   pdf={https://www.mdpi.com/1420-3049/26/11/3120/pdf},
   googlescholar=8805505848779860219,
-  image={https://www.researchgate.net/publication/351820137/figure/fig1/AS:1027014865739779@1621870833450/Relative-potential-energies-in-kcal-mol-calculated-by-the-FB-AIMD-method-are-shown-as-a_W640.jpg},
+  image={https://www.mdpi.com/molecules/molecules-26-03120/article_deploy/html/images/molecules-26-03120-g001-550.jpg},
   github={tongzhugroup/aimdfragmentation},
   researchgate=351820137
 }
