--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -287,6 +287,9 @@ pages={4304--4317},
              Perturbation Method}},
     journal =  {J. Phys. Chem. A},
     year =     2022,
+    volumn = 126,
+    issue = 45,
+    pages = {8519-–8533}
     annote =   {We describe the generalized weighted thermodynamic perturbation (gwTP)
              method for estimating the free energy surface of an expensive "high-
              level" potential energy function from the umbrella sampling performed
