add two papers for ReacNetGenerator
Signed-off-by: Jinzhe Zeng <jinzhe.zeng@rutgers.edu>

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -534,3 +534,73 @@ pages={4304--4317},
     doi =      {10.1016/j.ijhydene.2022.10.050},
 }
 
+@Article{Zhu_Processes_2022_v10_p2378,
+    author =   {Qiren Zhu and Fang Wang and Jie-Yao Lyu and Yang Li and Dongping Chen
+             and Wenming Yang},
+    title =    {{Molecular Dynamics Simulation on the Pyrolysis Process of PODE3-5}},
+    journal =  {Processes},
+    year =     2022,
+    volume =   10,
+    issue =    11,
+    pages =    2378,
+    annote =   {<jats:p>This paper investigates the pyrolysis of PODEn (n = 3, 4, 5)
+             using ReaxFF molecular dynamics simulation. A large-scale model, which
+             contains 2000 PODEn molecules, is simulated at 3000 K. The higher
+             frequencies of the initial PODEn decomposition reaction at
+             {\ensuremath{\alpha}} or {\ensuremath{\beta}} C-O bond show that the
+             {\ensuremath{\alpha}} or {\ensuremath{\beta}} C-O bond in PODEn is not
+             easy to break, which is approximately half the number of the other
+             type of C-O bond dissociation. Furthermore, the bond dissociation
+             energies (BDEs) are calculated using the ReaxFF method. The BDE of
+             {\ensuremath{\alpha}} or {\ensuremath{\beta}} C-O bond is higher than
+             that of the other C-O bond, ~3{\textendash}11 kcal/mol, indicating
+             that BDE is one of the factors causing the different proportions of
+             bonds broken. The evolution of pyrolysis products is also
+             investigated. The results reveal that long-chain pyrolysis products
+             from the initial PODEn decomposition are prone to further reaction,
+             while a large amount of CH3O and CH3 remains in the system. This helps
+             explain the difficulty in {\ensuremath{\alpha}} and
+             {\ensuremath{\beta}} C-O bond dissociation reactions. The results of
+             the pyrolysis products are consistent with the result in further
+             chemical kinetic simulation. The C2 species in pyrolysis products is
+             relatively low, especially for C2H4 and C2H3, which is around zero.
+             This supports the ability of PODEn to reduce soot emission.</jats:p>},
+    doi =      {10.3390/pr10112378},
+}
+
+@Article{She_Molecules_2022_v27_p8255,
+    author =   {Chongchong She and Kun Chen and Minglei Chen and Zhiyan Lu and Nana Wu
+             and Lijie Li and Junfeng Wang and Shaohua Jin},
+    title =    {{Coupling Effect of Non-Ignition Impact and Heat on the Decay of FOX-7}},
+    journal =  {Molecules},
+    year =     2022,
+    volume =   27,
+    issue =    23,
+    pages =    8255,
+    annote =   {<jats:p>Non-ignition impact and heat stimuli are the most common
+             external stimuli loaded on energetic materials. Nevertheless, there is
+             thereby an urgent need, but it is still a significant challenge to
+             comprehend their coupling effects on the decay and safety mechanisms
+             of energetic materials. Then, reactive molecular dynamics simulation
+             was employed to mimic practical situations and reveal the impact heat
+             coupling effect on the decay mechanism of FOX-7. The temperature and
+             the degree of compression of the crystal caused by the impact are
+             considered variables in the simulation. Both increasing the degree of
+             compression and elevating the temperature promotes the decay of FOX-7.
+             However, their underlying response mechanism is not the same. The
+             acceleration of decomposition is due to the elevated potential energy
+             of the FOX-7 molecules because of elevating the temperature. In
+             addition to the elevated potential energy of the molecule, the main
+             contribution to the decomposition from the compression is to change
+             the decomposition path. The results of the analysis show that
+             compression reduces the stability of the C=C bond, so that chemical
+             reactions related to the double bond occur. In addition,
+             interestingly, the compression along the c direction has an almost
+             equal effect on the final product as the compression along the b
+             direction. Finally, the decay reaction networks are proposed to
+             provide insights into the decomposition mechanism on atomic level. All
+             these findings are expected to pave a way to understand the underlying
+             response mechanism for the FOX-7 against external stimuli.</jats:p>},
+    doi =      {10.3390/molecules27238255},
+}
+
