--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -289,7 +289,7 @@ pages={4304--4317},
     year =     2022,
     volumn = 126,
     issue = 45,
-    pages = {8519-–8533},
+    pages = {8519--8533},
     annote =   {We describe the generalized weighted thermodynamic perturbation (gwTP)
              method for estimating the free energy surface of an expensive "high-
              level" potential energy function from the umbrella sampling performed
@@ -602,5 +602,49 @@ pages={4304--4317},
              these findings are expected to pave a way to understand the underlying
              response mechanism for the FOX-7 against external stimuli.</jats:p>},
     doi =      {10.3390/molecules27238255},
+}
+
+@Article{Zeng_JChemTheoryComput_2023_vNone_pNone,
+    author =   {Jinzhe Zeng and Yujun Tao and Timothy J Giese and Darrin M York},
+    title =    {{QD{\ensuremath{\pi}}: A Quantum Deep Potential Interaction Model for
+             Drug Discovery}},
+    journal =  {J. Chem. Theory Comput.},
+    year =     2023,
+    annote =   {We report QD{\ensuremath{\pi}}-v1.0 for modeling the internal energy
+             of drug molecules containing H, C, N, and O atoms. The
+             QD{\ensuremath{\pi}} model is in the form of a quantum
+             mechanical/machine learning potential correction
+             (QM/{\ensuremath{\Delta}}-MLP) that uses a fast third-order self-
+             consistent density-functional tight-binding (DFTB3/3OB) model that is
+             corrected to a quantitatively high-level of accuracy through a deep-
+             learning potential (DeepPot-SE). The model has the advantage that it
+             is able to properly treat electrostatic interactions and handle
+             changes in charge/protonation states. The model is trained against
+             reference data computed at the {\ensuremath{\omega}}B97X/6-31G* level
+             (as in the ANI-1x data set) and compared to several other approximate
+             semiempirical and machine learning potentials (ANI-1x, ANI-2x, DFTB3,
+             MNDO/d, AM1, PM6, GFN1-xTB, and GFN2-xTB). The QD{\ensuremath{\pi}}
+             model is demonstrated to be accurate for a wide range of intra- and
+             intermolecular interactions (despite its intended use as an internal
+             energy model) and has shown to perform exceptionally well for relative
+             protonation/deprotonation energies and tautomers. An example
+             application to model reactions involved in RNA strand cleavage
+             catalyzed by protein and nucleic acid enzymes illustrates
+             QD{\ensuremath{\pi}} has average errors less than 0.5 kcal/mol,
+             whereas the other models compared have errors over an order of
+             magnitude greater. Taken together, this makes QD{\ensuremath{\pi}}
+             highly attractive as a potential force field model for drug discovery.},
+    doi =      {10.1021/acs.jctc.2c01172},
+}
+
+@Article{Xu_PolymerDegradationandStability_2023_v208_p110249,
+    author =   {Zhiheng Xu and Qiyuan Xie and Cheng Chen and Xi Jiang},
+    title =    {{Molecular dynamics simulation of converting waste polyethylene (PE) to
+             chemicals and fuels under non-isothermal and isothermal conditions}},
+    journal =  {Polymer Degradation and Stability},
+    year =     2023,
+    volume =   208,
+    pages =    110249,
+    doi =      {10.1016/j.polymdegradstab.2023.110249},
 }
 
