--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -648,3 +648,15 @@ pages={4304--4317},
     doi =      {10.1016/j.polymdegradstab.2023.110249},
 }
 
+@InCollection{Liang_BookCharp_MultiscaleModeling_2023_p6-1,
+  author = {Wenshuo Liang and Jinzhe Zeng and Darrin M. York and Linfeng Zhang and Han Wang},
+  title = {Learning DeePMD-Kit: A Guide to Building Deep Potential Models},
+  booktitle = {A Practical Guide to Recent Advances in Multiscale Modeling and Simulation of Biomolecules},
+  chapter = {Chapter 6},
+  pages = {6-1--6-20},
+  editor = {Yong Wang and Ruhong Zhou},
+  publisher = {AIP Publishing},
+  year = 2023,
+  location = {Melville, New York},
+  doi = {10.1063/9780735425279_006}
+}
