--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -660,3 +660,40 @@ pages={4304--4317},
   location = {Melville, New York},
   doi = {10.1063/9780735425279_006}
 }
+
+@Article{Zeng_JChemPhys_2023_v158_p124110,                                                                                                              author =   {Jinzhe Zeng and Yujun Tao and Timothy J Giese and Darrin M York},
+    title =    {{Modern semiempirical electronic structure methods and machine learning
+             potentials for drug discovery: Conformers, tautomers, and protonation
+             states}},
+    journal =  {J. Chem. Phys.},
+    year =     2023,
+    volume =   158,
+    issue =    12,
+    pages =    124110,
+    annote =   {Modern semiempirical electronic structure methods have considerable
+             promise in drug discovery as universal "force fields" that can
+             reliably model biological and drug-like molecules, including
+             alternative tautomers and protonation states. Herein, we compare the
+             performance of several neglect of diatomic differential overlap-based
+             semiempirical (MNDO/d, AM1, PM6, PM6-D3H4X, PM7, and ODM2), density-
+             functional tight-binding based (DFTB3, DFTB/ChIMES, GFN1-xTB, and
+             GFN2-xTB) models with pure machine learning potentials (ANI-1x and
+             ANI-2x) and hybrid quantum mechanical/machine learning potentials
+             (AIQM1 and QD{\ensuremath{\pi}}) for a wide range of data computed at
+             a consistent {\ensuremath{\omega}}B97X/6-31G* level of theory (as in
+             the ANI-1x database). This data includes conformational energies,
+             intermolecular interactions, tautomers, and protonation states.
+             Additional comparisons are made to a set of natural and synthetic
+             nucleic acids from the artificially expanded genetic information
+             system that has important implications for the design of new
+             biotechnology and therapeutics. Finally, we examine the acid/base
+             chemistry relevant for RNA cleavage reactions catalyzed by small
+             nucleolytic ribozymes, DNAzymes, and ribonucleases. Overall, the
+             hybrid quantum mechanical/machine learning potentials appear to be the
+             most robust for these datasets, and the recently developed
+             QD{\ensuremath{\pi}} model performs exceptionally well, having
+             especially high accuracy for tautomers and protonation states relevant
+             to drug discovery.},
+    PMCID =    {PMC10052497},
+    doi =      {10.1063/5.0139281},
+}
