--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -635,6 +635,7 @@ pages={4304--4317},
              magnitude greater. Taken together, this makes QD{\ensuremath{\pi}}
              highly attractive as a potential force field model for drug discovery.},
     doi =      {10.1021/acs.jctc.2c01172},
+    researchgate = 367433019,
 }
 
 @Article{Xu_PolymerDegradationandStability_2023_v208_p110249,
@@ -696,12 +697,14 @@ pages={4304--4317},
              to drug discovery.},
     PMCID =    {PMC10052497},
     doi =      {10.1063/5.0139281},
+    researchgate = 369045636,
 }
 
 @misc{Zeng_2023_deepmdkit,
     title={DeePMD-kit v2: A software package for Deep Potential models},
-    author={Jinzhe Zeng and Duo Zhang and Denghui Lu and Pinghui Mo and Zeyu Li and Yixiao Chen and Marián Rynik and Li'ang Huang and Ziyao Li and Shaochen Shi and Yingze Wang and Haotian Ye and Ping Tuo and Jiabin Yang and Ye Ding and Yifan Li and Davide Tisi and Qiyu Zeng and Han Bao and Yu Xia and Jiameng Huang and Koki Muraoka and Yibo Wang and Junhan Chang and Fengbo Yuan and Sigbjørn Løland Bore and Chun Cai and Yinnian Lin and Bo Wang and Jiayan Xu and Jia-Xin Zhu and Chenxing Luo and Yuzhi Zhang and Rhys E. A. Goodall and Wenshuo Liang and Anurag Kumar Singh and Sikai Yao and Jingchao Zhang and Renata Wentzcovitch and Jiequn Han and Jie Liu and Weile Jia and Darrin M. York and Weinan E and Roberto Car and Linfeng Zhang and Han Wang},
+    author={Jinzhe Zeng and Duo Zhang and Denghui Lu and Pinghui Mo and Zeyu Li and Yixiao Chen and Marián Rynik and Li'ang Huang and Ziyao Li and Shaochen Shi and Yingze Wang and Haotian Ye and Ping Tuo and Jiabin Yang and Ye Ding and Yifan Li and Davide Tisi and Qiyu Zeng and Han Bao and Yu Xia and Jiameng Huang and Koki Muraoka and Yibo Wang and Junhan Chang and Fengbo Yuan and Sigbjørn Løland Bore and Chun Cai and Yinnian Lin and Bo Wang and Jiayan Xu and Jia-Xin Zhu and Chenxing Luo and Yuzhi Zhang and Rhys E. A. Goodall and Wenshuo Liang and Anurag Kumar Singh and Sikai Yao and Jingchao Zhang and Renata Wentzcovitch and Jiequn Han and Jie Liu and Weile Jia and Darrin M. York and Weinan E and Roberto Car and Linfeng Zhang* and Han Wang*},
     year={2023},
     doi={10.48550/arXiv.2304.09409},
+    researchgate=370127298,
     journal={arXiv}
 }
