--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -1,4 +1,4 @@
-@Article{Zeng_NatCommun_2020_v11_p5713,
++@Article{Zeng_NatCommun_2020_v11_p5713,
   author =   {Jinzhe Zeng and Liqun Cao and Mingyuan Xu and Tong Zhu* and John Z. H. Zhang*},
   title =    {{Complex reaction processes in combustion unraveled by neural network-based molecular dynamics simulation}},
   journal =  {Nature Communications},
@@ -662,7 +662,8 @@ pages={4304--4317},
   doi = {10.1063/9780735425279_006}
 }
 
-@Article{Zeng_JChemPhys_2023_v158_p124110,                                                                                                              author =   {Jinzhe Zeng and Yujun Tao and Timothy J Giese and Darrin M York},
+@Article{Zeng_JChemPhys_2023_v158_p124110,
+    author =   {Jinzhe Zeng and Yujun Tao and Timothy J Giese and Darrin M York},
     title =    {{Modern semiempirical electronic structure methods and machine learning
              potentials for drug discovery: Conformers, tautomers, and protonation
              states}},
@@ -700,11 +701,42 @@ pages={4304--4317},
     researchgate = 369045636,
 }
 
-@misc{Zeng_2023_deepmdkit,
-    title={DeePMD-kit v2: A software package for Deep Potential models},
-    author={Jinzhe Zeng and Duo Zhang and Denghui Lu and Pinghui Mo and Zeyu Li and Yixiao Chen and Marián Rynik and Li'ang Huang and Ziyao Li and Shaochen Shi and Yingze Wang and Haotian Ye and Ping Tuo and Jiabin Yang and Ye Ding and Yifan Li and Davide Tisi and Qiyu Zeng and Han Bao and Yu Xia and Jiameng Huang and Koki Muraoka and Yibo Wang and Junhan Chang and Fengbo Yuan and Sigbjørn Løland Bore and Chun Cai and Yinnian Lin and Bo Wang and Jiayan Xu and Jia-Xin Zhu and Chenxing Luo and Yuzhi Zhang and Rhys E. A. Goodall and Wenshuo Liang and Anurag Kumar Singh and Sikai Yao and Jingchao Zhang and Renata Wentzcovitch and Jiequn Han and Jie Liu and Weile Jia and Darrin M. York and Weinan E and Roberto Car and Linfeng Zhang* and Han Wang*},
-    year={2023},
-    doi={10.48550/arXiv.2304.09409},
-    researchgate=370127298,
-    journal={arXiv}
+@article{Zeng_2023_deepmdkit,
+    title  = {{DeePMD-kit v2: A software package for deep potential models}},
+    author =   {Jinzhe Zeng and Duo Zhang and Denghui Lu and Pinghui Mo and Zeyu Li
+             and Yixiao Chen and Mari{\'a}n Rynik and Li'ang Huang and Ziyao Li and 
+             Shaochen Shi and Yingze Wang and Haotian Ye and Ping Tuo and Jiabin
+             Yang and Ye Ding and Yifan Li and Davide Tisi and Qiyu Zeng and Han 
+             Bao and Yu Xia and Jiameng Huang and Koki Muraoka and Yibo Wang and 
+             Junhan Chang and Fengbo Yuan and Sigbj{\o}rn L{\o}land Bore and Chun
+             Cai and Yinnian Lin and Bo Wang and Jiayan Xu and Jia-Xin Zhu and 
+             Chenxing Luo and Yuzhi Zhang and Rhys E A Goodall and Wenshuo Liang
+             and Anurag Kumar Singh and Sikai Yao and Jingchao Zhang and Renata
+             Wentzcovitch and Jiequn Han and Jie Liu and Weile Jia and Darrin M
+             York and Weinan E and Roberto Car and Linfeng Zhang and Han Wang},
+    journal =  {J. Chem. Phys.},
+    volume =   159,
+    issue =    5,  
+    year =    2023,
+    pages  =   054801,
+    annote =   {DeePMD-kit is a powerful open-source software package that facilitates
+             molecular dynamics simulations using machine learning potentials known
+             as Deep Potential (DP) models. This package, which was released in
+             2017, has been widely used in the fields of physics, chemistry,
+             biology, and material science for studying atomistic systems. The 
+             current version of DeePMD-kit offers numerous advanced features, such
+             as DeepPot-SE, attention-based and hybrid descriptors, the ability to
+             fit tensile properties, type embedding, model deviation, DP-range
+             correction, DP long range, graphics processing unit support for 
+             customized operators, model compression, non-von Neumann molecular
+             dynamics, and improved usability, including documentation, compiled
+             binary packages, graphical user interfaces, and application
+             programming interfaces. This article presents an overview of the 
+             current major version of the DeePMD-kit package, highlighting its 
+             features and technical details. Additionally, this article presents a
+             comprehensive procedure for conducting molecular dynamics as a
+             representative application, benchmarks the accuracy and efficiency of
+             different models, and discusses ongoing developments.},
+    doi =      {10.1063/5.0155600},
+
 }
